[package]
name = "electrscash"
version = "1.1.1"
authors = ["Bitcoin Unlimited developers <info@bitcoinunlimited.info", "Roman Zeyde <me@romanzey.de>"]
description = "An efficient implementation of Electrum Server"
license = "MIT"
homepage = "https://github.com/BitcoinUnlimited/ElectrsCash"
repository = "https://github.com/BitcoinUnlimited/ElectrsCash"
keywords = ["bitcoin", "cash", "electrum", "server", "index"]
documentation = "https://docs.rs/electrscash/"
readme = "README.md"
edition = "2018"
build = "build.rs"

[package.metadata.configure_me]
spec = "config_spec.toml"

[features]
latest_rust = []  # use latest Rust features (otherwise, support Rust 1.34)

[dependencies]
base64 = "0.10"
bincode = "1.0"
bitcoin = { version = "0.23", features = ["use-serde"] }
bitcoin_hashes = "0.7.6"
configure_me = "0.3.3"
crossbeam-channel = "0.3"
dirs = "1.0"
error-chain = "0.12"
glob = "0.3"
hex = "0.3"
libc = "0.2"
log = "0.4"
lru = "0.1"
num_cpus = "1.0"
page_size = "0.4"
prometheus = "0.5"
rocksdb = "= 0.12.2"	# due to https://github.com/romanz/electrs/issues/193
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.1"
stderrlog = "0.4.1"
sysconf = ">=0.3.4"
time = "0.1"
tiny_http = "0.6"
unsigned-varint = "0.2.3"
cashaccount-sys = ">=0.1"
c_fixed_string = "0.2"
version-compare = "0.0.10"
bitcoincash-addr = "0.5.1"

[build-dependencies]
configure_me_codegen = "0.3.12"
