[package]
name = "electrscash"
version = "3.0.0"
authors = ["Bitcoin Unlimited developers <info@bitcoinunlimited.info", "Roman Zeyde <me@romanzey.de>"]
description = "An efficient implementation of Electrum Server"
license = "MIT"
homepage = "https://github.com/BitcoinUnlimited/ElectrsCash"
repository = "https://github.com/BitcoinUnlimited/ElectrsCash"
keywords = ["bitcoin", "cash", "electrum", "server", "index"]
documentation = "https://docs.rs/electrscash/"
readme = "README.md"
edition = "2018"
build = "build.rs"

[package.metadata.configure_me]
spec = "config_spec.toml"

[features]
default = ["rocksdb/snappy", "rocksdb/lz4", "rocksdb/zstd", "rocksdb/zlib", "rocksdb/bzip2"]

[dependencies]
async-std = "1.7.0"
base64 = "0.10"
bincode = "1.0"
bitcoincash = { version = "0.23", features = ["use-serde"] }
bytecodec = "0.4.13"
byteorder = "1"
configure_me = "0.3.4"
configure_me_codegen = "0.3.14"
crossbeam-channel = "0.3"
error-chain = "0.12"
glob = "0.3"
hex = "0.3"
httpcodec = "0.2.3"
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"
libc = "0.2"
log = "0.4"
num_cpus = "1.0"
page_size = "0.4"
prometheus = "0.11"
protobuf = "= 2.14.0"   # https://github.com/stepancheg/rust-protobuf/blob/master/CHANGELOG.md#2150---2020-06-21
rocksdb = { version = "0.15.0", default-features = false } # due to https://github.com/romanz/electrs/issues/193
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.1"
stderrlog = "0.4.1"
sysconf = ">=0.3.4"
time = "0.1"
tiny_http = "0.6"
sha2 = "0.9.2"
sha-1 = "0.9.2"
dirs-next = "2.0.0"
unsigned-varint = "0.2.3"
cashaccount-sys = ">=0.1"
c_fixed_string = "0.2"
version-compare = "0.0.10"
bitcoincash-addr = "0.5.1"
indexmap = "1.6.0"
rand = "0.7.3"
rust_decimal = { version = "1.8.1", features = ["serde-float"] }
genawaiter = "0.99.1"

[build-dependencies]
configure_me_codegen = "0.3.12"
